syntax = "proto3";

package pb;

option go_package = "github.com/steve-mir/diivix_backend/pb";


// A like or unlike event sent by the client
message ViewPostRequest {
  string post_id = 1;   // ID of the post being liked or unliked
  bool viewed = 2;        // True if like, false if unlike
}

// Real-time update of likes sent to the client
message ViewPostResponse {
  string post_id = 1;   // ID of the post for which the like count is updated
  int64 view_count = 2; // The new like count for the post
}

message ViewUpdate {
  string post_id = 1;
  int64 new_views = 2;
}
